<resources>
    <string name="app_name">FlightSearch</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="departure_airport_code">Departure Airport Code</string>
    <string name="arrival_airport_code">Arrival Airport Code</string>
    <string name="departing">Departing</string>
    <string name="returning">Returning</string>
    <string name="search">Search</string>

    <string name="no_result">Result not found.\nPlease try with another search criteria.</string>
    <string name="flight_result">%1$s - %2$s : %3$s - %4$s</string>

    <string name="outbound_duration">Outbound duration: %s</string>
    <string name="inbound_duration">Inbound duration: %s</string>
    <string name="amount">A$ %.2f</string>
</resources>